# simple-plugins

./: .gitignore  Example.hs  Main.hs  Makefile  README.md  simple-plugins.cabal
executables/: Example.hs  Main.hs
executables/Example/: Extras.hs  Pipes.hs  Plugin.hs
sources/: Plugins.hs  SimplePlugins.hs
sources/SimplePlugins/: Cabal.hs  Etc.hs  Main.hs  Types.hs
