name: simple-plugins
version: 0.0.0
synopsis: easily hot-swap a config, written in Haskell (XMonad-style)
category: System
description:
 easily hot-swap a config, written in Haskell (XMonad-style)
author:     Spiros Boosalis
maintainer: samboosalis@gmail.com
homepage:    https://github.com/sboosali/simple-plugins#readme
bug-reports: https://github.com/sboosali/simple-plugins/issues
copyright:    Copyright (C) 2015 Spiros M. Boosalis
license:      MIT
license-file: LICENSE
build-type:  Simple
stability:   experimental
tested-with: GHC == 7.10.1

extra-source-files:
 README.md

data-files:
cabal-version:       >=1.10

source-repository head
 type:     git
 location: https://github.com/sboosali/simple-plugins


-- ================================================================ --

library
 hs-source-dirs:
  sources
 exposed-modules:
  SimplePlugins
  SimplePlugins.Types
  SimplePlugins.Etc
  

 build-depends:
    fsnotify  ==0.2.*,
    pipes ==4.1.*, 
    pipes-concurrency  ==2.0.*, 
--  , lens  ==4.12.*
    tagged, 

    transformers,
    directory, 
    filepath, 
    template-haskell  ==2.10.*,
    base ==4.8.*, 

    ghc-paths, 
--     cabal-ghc-dynflags,
    bin-package-db,
    ghc


 default-language: Haskell2010
 ghc-options:
  -Wall


-- ================================================================ --

executable example
 main-is: Main.hs
 hs-source-dirs: executables

 default-language: Haskell2010
 ghc-options:
  -Wall

 build-depends:
    simple-plugins
  , base ==4.8.*
  , ghc
  , template-haskell  ==2.10.*
  , pipes-concurrency  ==2.0.*
  , pipes ==4.1.* 
  , transformers
  , tagged

